--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-responsive": "^8.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-transition-group": "^4.2.2"
