--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-responsive": "^8.0.0",
+    "react-motion": "^0.5.2",
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-transition-group": "^4.2.2"
